2007-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/publish/Makefile.am: Add missing publish
	plugin UI file to the dist
	* src/plugins/sample-vala/Makefile.am: Add missing
	vala source to the dist
	Spotted by Götz Waschk
	(Closes: #502052)

2007-12-06  Takao Fujiwara  <takao.fujiwara@sun.com>

	reviewed by: Philip Withnall

	* data/totem.ui:
	  Mark messages for translation.
	* src/plugins/skipto/totem-skipto-plugin.c:
	  (impl_activate): Set translation domain.
	  (Closes: #501485)

2007-12-04  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am: Make the plugins link
	against the -mini playlist parser lib (Closes: #501352)

2007-12-04  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/mozilla-viewer.ui:
	* data/playlist.ui:
	* data/plugins.ui:
	* data/totem.ui:
	* src/plugins/publish/publish-plugin.ui: Fix some problems with
	the UI files which were erroneously accepted by the current
	GtkBuilder parser. (Closes: #499865)

============ Version 2.21.4

2007-12-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.4

2007-12-03  Bastien Nocera  <hadess@hadess.net>

	* plparse/*: 
	* totem-plparser-uninstalled.pc.in:
	* totem-plparser.pc.in: Move to totem-pl-parser module

	* Makefile.am:
	* bindings/python/totem.override:
	* browser-plugin/Makefile.am:
	* configure.in:
	* lib/Makefile.am:
	* src/Makefile.am:
	* src/backend/bacon-video-widget.h:
	* src/totem-playlist.h:
	* src/totem.c:
	* src/totem.h: Update includes and configure to use the external
	totem-pl-parser

	(Closes: #462153)

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Small improvements to the publish plugin.

	* src/plugins/publish/totem-publish.c: Populate the internal playlist
	after plugin activation. Switch to playlist page right after
	retrieving the list for better user experience (streaming lag).

============ Version 2.21.3

2007-12-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.3
