@@ -255,6 +255,165 @@ AC_SUBST(GTK_CFLAGS)
 GTK_LIBS="$GTK_LIBS $EXTRA_BACKEND_LIBS"
 AC_SUBST(GTK_LIBS)
 
+dnl ================================================================
+dnl Python plugins
+dnl ================================================================
+
+AC_MSG_CHECKING([whether Python plugin support is requested])
+AC_ARG_ENABLE([python],
+	AS_HELP_STRING([--enable-python],[Enable python support]),
+	[enable_python=$enableval have_python=$enableval],
+	[enable_python=autodetect have_python=yes])
+AC_MSG_RESULT([$enable_python])
+
+if test "x$have_python" != "xyes"; then
+	if test "x$enable_python" = "xyes"; then
+		AC_MSG_ERROR([Python not found])
+	elif test "x$enable_python" = "xautodetect"; then
+		enable_python=no
+		AC_MSG_WARN([Python not found, disabling python support])
+	fi
+fi
+
+if test "x$have_python" != "xno"; then
+	AM_PATH_PYTHON([2.3],[],[no])
+	if test "x$PYTHON" = "x:"; then
+		have_python=no
+	fi
+fi
+
+if test "x$have_python" != "xno"; then
+	PY_PREFIX=`$PYTHON -c 'import sys ; print sys.prefix'`
+	PY_EXEC_PREFIX=`$PYTHON -c 'import sys ; print sys.exec_prefix'`
+	PYTHON_LIBS="-lpython$PYTHON_VERSION"
+	if test -d $PY_EXEC_PREFIX/lib64 ; then
+		PYTHON_LIB_LOC="-L$PY_EXEC_PREFIX/lib64/python$PYTHON_VERSION/config"
+		PYTHON_MAKEFILE="$PY_EXEC_PREFIX/lib64/python$PYTHON_VERSION/config/Makefile"
+	else
+		PYTHON_LIB_LOC="-L$PY_EXEC_PREFIX/lib/python$PYTHON_VERSION/config"
+		PYTHON_MAKEFILE="$PY_EXEC_PREFIX/lib/python$PYTHON_VERSION/config/Makefile"
+	fi
+	PYTHON_CFLAGS="-I$PY_PREFIX/include/python$PYTHON_VERSION"
+	PYTHON_LOCALMODLIBS=`sed -n -e 's/^LOCALMODLIBS=\(.*\)/\1/p' $PYTHON_MAKEFILE`
+	PYTHON_BASEMODLIBS=`sed -n -e 's/^BASEMODLIBS=\(.*\)/\1/p' $PYTHON_MAKEFILE`
+	PYTHON_OTHER_LIBS=`sed -n -e 's/^LIBS=\(.*\)/\1/p' $PYTHON_MAKEFILE`
+	PYTHON_EXTRA_LIBS="$PYTHON_LOCALMODLIBS $PYTHON_BASEMODLIBS $PYTHON_OTHER_LIBS"
+	AC_SUBST([PYTHON_LIBS])
+	AC_SUBST([PYTHON_LIB_LOC])
+	AC_SUBST([PYTHON_CFLAGS])
+	AC_SUBST([PYTHON_EXTRA_LIBS])
+
+	dnl FIXME: do we really need this test?
+	AC_MSG_CHECKING([whether we can build a shared library depending on libpython])
+	rm -rf testpython
+	mkdir testpython
+	cd testpython
+	cat > testpython.c <<EOF
+#include <Python.h>
+int testpython (void)
+{
+Py_Exit (0);
+}
+EOF
+
+	if /bin/sh ../libtool --mode=compile ${CC} $PYTHON_CFLAGS -c testpython.c >/dev/null 2>&1 && \
+		/bin/sh ../libtool --mode=link ${CC} -o testpython.la -rpath `pwd` -module -avoid-version $PYTHON_LIB_LOC testpython.lo $PYTHON_LIBS $PYTHON_EXTRA_LIBS >/dev/null 2>&1 && \
+		grep 'dlname.*testpython' testpython.la >/dev/null 2>&1; then
+		result=yes
+	else
+		result=no
+		have_python=no
+	fi
+	cd ..
+	rm -rf testpython
+	AC_MSG_RESULT([$result])
+fi
+
+if test "x$have_python" != "xno"; then
+	PYGTK_REQUIRED=2.12.0
+
+	PKG_CHECK_MODULES([PYGTK], [
+		pygtk-2.0 >= $PYGTK_REQUIRED
+		totem-plparser > $TOTEM_PLPARSER_REQS],
+		[],
+		[
+		have_python=no
+		if test "x$enable_python" = "xyes"; then
+			AC_MSG_ERROR([$PYGTK_PKG_ERRORS])
+		elif test "x$enable_python" = "xautodetect"; then
+			enable_python=no
+			AC_MSG_WARN([$PYGTK_PKG_ERRORS])
+			AC_MSG_WARN([Disabling python support])
+		fi
+		])
+
+	AC_SUBST([PYGTK_CFLAGS])
+	AC_SUBST([PYGTK_LIBS])
+fi
+
+if test "x$have_python" != "xno"; then
+	AC_MSG_CHECKING([for pygtk defs])
+	PYGTK_DEFSDIR=`$PKG_CONFIG --variable=defsdir pygtk-2.0`
+	AC_MSG_RESULT([$PYGTK_DEFSDIR])
+
+	AC_MSG_CHECKING([for pygtk codegen])
+	PYGTK_CODEGEN="$PYTHON `$PKG_CONFIG --variable=codegendir pygtk-2.0`/codegen.py"
+	AC_MSG_RESULT([$PYGTK_CODEGEN])
+
+	AC_MSG_CHECKING([for pygtk h2def])
+	PYGTK_H2DEF="$PYTHON `$PKG_CONFIG --variable=codegendir pygtk-2.0`/h2def.py"
+	AC_MSG_RESULT([$PYGTK_H2DEF])
+
+	AC_SUBST([PYGTK_DEFSDIR])
+	AC_SUBST([PYGTK_CODEGEN])
+	AC_SUBST([PYGTK_H2DEF])
+
+dnl	uncomment when http://bugzilla.gnome.org/show_bug.cgi?id=351072 fixed
+dnl	PKG_CHECK_EXISTS([pygobject-2.0 >= X.XX.X],
+dnl			 AC_DEFINE([PYGOBJECT_CAN_MARSHAL_GVALUE]))
+
+	dnl Check for -fno-strict-aliasing
+	FLAGS="-fno-strict-aliasing"
+	save_CFLAGS="$CFLAGS"
+	CFLAGS="$CFLAGS $FLAGS"
+	AC_MSG_CHECKING([whether [$]CC understands $FLAGS])
+	AC_TRY_COMPILE([], [], [compiler_has_option=yes], [compiler_has_option=no])
+	CFLAGS="$save_CFLAGS"
+	AC_MSG_RESULT($compiler_has_option)
+	if test $compiler_has_option = yes; then
+		NO_STRICT_ALIASING_CFLAGS="$FLAGS"
+	fi
+	AC_SUBST([NO_STRICT_ALIASING_CFLAGS])
+fi
+
+if test "x$have_python" != "xno" -a "x$enable_python" != "xno"; then
+	enable_python=yes
+	AC_DEFINE([ENABLE_PYTHON],[1],[Define to compile with python plugin support])
+fi
+
+AM_CONDITIONAL([ENABLE_PYTHON],[test "x$enable_python" = "xyes"])
+
+dnl ================================================================
+dnl Vala plugins
+dnl ================================================================
+AC_MSG_CHECKING([whether Vala plugin support is requested])
+AC_ARG_ENABLE([vala],
+	AS_HELP_STRING([--enable-vala],[Enable Vala plugin support]),
+	[enable_vala=$enableval have_vala=$enableval],
+	[enable_vala=autodetect have_vala=yes])
+AC_MSG_RESULT([$enable_vala])
+if test "x$enable_vala" != "xno"; then
+	PKG_CHECK_MODULES(VALA, vala-1.0 >= $VALA_REQS, with_vala=yes,
+		          with_vala=no)
+	if test "x$with_vala" = "xyes"; then
+		VALAC="`pkg-config --variable=prefix vala-1.0`/bin/valac"
+		AC_SUBST([VALAC])
+	elif test "x$enable_vala" = "xyes"; then
+		AC_MSG_ERROR([Vala plugin support explicitly requested, but not found])
+	fi
+fi
+AM_CONDITIONAL(ENABLE_VALA, test "x$with_vala" = "xyes")
+
 # ********************
 # Movie player plugins
 # ********************
@@ -365,6 +524,12 @@ for plugin in ${used_plugins}; do
 			PKG_CHECK_MODULES(TRACKER, tracker, [HAVE_TRACKER=yes], [HAVE_TRACKER=no])
 			if test "${HAVE_TRACKER}" != "yes" ; then
 				plugin_error_or_ignore "you need the tracker development headers installed for the tracker plugin"
+				add_plugin="0"
+			fi
+		;;
+		sample-vala)
+			if test "${with_vala}" != "yes" ; then
+				plugin_error_or_ignore "you need vala installed to use the sample-vala plugin"
 				add_plugin="0"
 			fi
 		;;
@@ -853,165 +1018,6 @@ AC_SUBST([AM_CPPFLAGS])
 AC_SUBST([AM_CFLAGS])
 AC_SUBST([AM_CXXFLAGS])
 AC_SUBST([AM_LDFLAGS])
-
-dnl ================================================================
-dnl Python plugins
-dnl ================================================================
-
-AC_MSG_CHECKING([whether Python plugin support is requested])
-AC_ARG_ENABLE([python],
-	AS_HELP_STRING([--enable-python],[Enable python support]),
-	[enable_python=$enableval have_python=$enableval],
-	[enable_python=autodetect have_python=yes])
-AC_MSG_RESULT([$enable_python])
-
-if test "x$have_python" != "xyes"; then
-	if test "x$enable_python" = "xyes"; then
-		AC_MSG_ERROR([Python not found])
-	elif test "x$enable_python" = "xautodetect"; then
-		enable_python=no
-		AC_MSG_WARN([Python not found, disabling python support])
-	fi
-fi
-
-if test "x$have_python" != "xno"; then
-	AM_PATH_PYTHON([2.3],[],[no])
-	if test "x$PYTHON" = "x:"; then
-		have_python=no
-	fi
-fi
-
-if test "x$have_python" != "xno"; then
-	PY_PREFIX=`$PYTHON -c 'import sys ; print sys.prefix'`
-	PY_EXEC_PREFIX=`$PYTHON -c 'import sys ; print sys.exec_prefix'`
-	PYTHON_LIBS="-lpython$PYTHON_VERSION"
-	if test -d $PY_EXEC_PREFIX/lib64 ; then
-		PYTHON_LIB_LOC="-L$PY_EXEC_PREFIX/lib64/python$PYTHON_VERSION/config"
-		PYTHON_MAKEFILE="$PY_EXEC_PREFIX/lib64/python$PYTHON_VERSION/config/Makefile"
-	else
-		PYTHON_LIB_LOC="-L$PY_EXEC_PREFIX/lib/python$PYTHON_VERSION/config"
-		PYTHON_MAKEFILE="$PY_EXEC_PREFIX/lib/python$PYTHON_VERSION/config/Makefile"
-	fi
-	PYTHON_CFLAGS="-I$PY_PREFIX/include/python$PYTHON_VERSION"
-	PYTHON_LOCALMODLIBS=`sed -n -e 's/^LOCALMODLIBS=\(.*\)/\1/p' $PYTHON_MAKEFILE`
-	PYTHON_BASEMODLIBS=`sed -n -e 's/^BASEMODLIBS=\(.*\)/\1/p' $PYTHON_MAKEFILE`
-	PYTHON_OTHER_LIBS=`sed -n -e 's/^LIBS=\(.*\)/\1/p' $PYTHON_MAKEFILE`
-	PYTHON_EXTRA_LIBS="$PYTHON_LOCALMODLIBS $PYTHON_BASEMODLIBS $PYTHON_OTHER_LIBS"
-	AC_SUBST([PYTHON_LIBS])
-	AC_SUBST([PYTHON_LIB_LOC])
-	AC_SUBST([PYTHON_CFLAGS])
-	AC_SUBST([PYTHON_EXTRA_LIBS])
-
-	dnl FIXME: do we really need this test?
-	AC_MSG_CHECKING([whether we can build a shared library depending on libpython])
-	rm -rf testpython
-	mkdir testpython
-	cd testpython
-	cat > testpython.c <<EOF
-#include <Python.h>
-int testpython (void)
-{
-Py_Exit (0);
-}
-EOF
-
-	if /bin/sh ../libtool --mode=compile ${CC} $PYTHON_CFLAGS -c testpython.c >/dev/null 2>&1 && \
-		/bin/sh ../libtool --mode=link ${CC} -o testpython.la -rpath `pwd` -module -avoid-version $PYTHON_LIB_LOC testpython.lo $PYTHON_LIBS $PYTHON_EXTRA_LIBS >/dev/null 2>&1 && \
-		grep 'dlname.*testpython' testpython.la >/dev/null 2>&1; then
-		result=yes
-	else
-		result=no
-		have_python=no
-	fi
-	cd ..
-	rm -rf testpython
-	AC_MSG_RESULT([$result])
-fi
-
-if test "x$have_python" != "xno"; then
-	PYGTK_REQUIRED=2.12.0
-
-	PKG_CHECK_MODULES([PYGTK], [
-		pygtk-2.0 >= $PYGTK_REQUIRED
-		totem-plparser > $TOTEM_PLPARSER_REQS],
-		[],
-		[
-		have_python=no
-		if test "x$enable_python" = "xyes"; then
-			AC_MSG_ERROR([$PYGTK_PKG_ERRORS])
-		elif test "x$enable_python" = "xautodetect"; then
-			enable_python=no
-			AC_MSG_WARN([$PYGTK_PKG_ERRORS])
-			AC_MSG_WARN([Disabling python support])
-		fi
-		])
-
-	AC_SUBST([PYGTK_CFLAGS])
-	AC_SUBST([PYGTK_LIBS])
-fi
-
-if test "x$have_python" != "xno"; then
-	AC_MSG_CHECKING([for pygtk defs])
-	PYGTK_DEFSDIR=`$PKG_CONFIG --variable=defsdir pygtk-2.0`
-	AC_MSG_RESULT([$PYGTK_DEFSDIR])
-
-	AC_MSG_CHECKING([for pygtk codegen])
-	PYGTK_CODEGEN="$PYTHON `$PKG_CONFIG --variable=codegendir pygtk-2.0`/codegen.py"
-	AC_MSG_RESULT([$PYGTK_CODEGEN])
-
-	AC_MSG_CHECKING([for pygtk h2def])
-	PYGTK_H2DEF="$PYTHON `$PKG_CONFIG --variable=codegendir pygtk-2.0`/h2def.py"
-	AC_MSG_RESULT([$PYGTK_H2DEF])
-
-	AC_SUBST([PYGTK_DEFSDIR])
-	AC_SUBST([PYGTK_CODEGEN])
-	AC_SUBST([PYGTK_H2DEF])
-
-dnl	uncomment when http://bugzilla.gnome.org/show_bug.cgi?id=351072 fixed
-dnl	PKG_CHECK_EXISTS([pygobject-2.0 >= X.XX.X],
-dnl			 AC_DEFINE([PYGOBJECT_CAN_MARSHAL_GVALUE]))
-
-	dnl Check for -fno-strict-aliasing
-	FLAGS="-fno-strict-aliasing"
-	save_CFLAGS="$CFLAGS"
-	CFLAGS="$CFLAGS $FLAGS"
-	AC_MSG_CHECKING([whether [$]CC understands $FLAGS])
-	AC_TRY_COMPILE([], [], [compiler_has_option=yes], [compiler_has_option=no])
-	CFLAGS="$save_CFLAGS"
-	AC_MSG_RESULT($compiler_has_option)
-	if test $compiler_has_option = yes; then
-		NO_STRICT_ALIASING_CFLAGS="$FLAGS"
-	fi
-	AC_SUBST([NO_STRICT_ALIASING_CFLAGS])
-fi
-
-if test "x$have_python" != "xno" -a "x$enable_python" != "xno"; then
-	enable_python=yes
-	AC_DEFINE([ENABLE_PYTHON],[1],[Define to compile with python plugin support])
-fi
-
-AM_CONDITIONAL([ENABLE_PYTHON],[test "x$enable_python" = "xyes"])
-
-dnl ================================================================
-dnl Vala plugins
-dnl ================================================================
-AC_MSG_CHECKING([whether Vala plugin support is requested])
-AC_ARG_ENABLE([vala],
-	AS_HELP_STRING([--enable-vala],[Enable Vala plugin support]),
-	[enable_vala=$enableval have_vala=$enableval],
-	[enable_vala=autodetect have_vala=yes])
-AC_MSG_RESULT([$enable_vala])
-if test "x$enable_vala" != "xno"; then
-	PKG_CHECK_MODULES(VALA, vala-1.0 >= $VALA_REQS, with_vala=yes,
-		          with_vala=no)
-	if test "x$with_vala" = "xyes"; then
-		VALAC="`pkg-config --variable=prefix vala-1.0`/bin/valac"
-		AC_SUBST([VALAC])
-	elif test "x$enable_vala" = "xyes"; then
-		AC_MSG_ERROR([Vala plugin support explicitly requested, but not found])
-	fi
-fi
-AM_CONDITIONAL(ENABLE_VALA, test "x$with_vala" = "xyes")
 
 AC_OUTPUT([
 Makefile
